# docker-fastapi

./: Dockerfile  README.md  main.py  pyproject.toml
